--- a/Exterior.html
+++ b/Exterior.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Exterior Work | ELI MAS Construction Inc</title>
-  <meta content="Expert exterior services by ELI MAS Construction Inc, including sidewalk repair, driveway repairs, foundation work, masonry, and more." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Exterior Work in NYC | ELI MAS Construction Inc</title>
+  <meta name="description" content="Expert exterior services in NYC by ELI MAS Construction Inc, including sidewalk repair, driveway repair, masonry, foundation work, and more." />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="canonical" href="https://elimasconst.github.io/eli-mas-test-website/Exterior.html" /> -->
 </head>
 <body>
   <header>
-   <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-   <h1>ELI MAS CONSTRUCTION INC</h1>
-   <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-   <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
 
  <section class="exterior-section">
   <h2>Exterior Work</h2>
 
-  <p><strong>Sidewalk Repair:</strong> We specialize in professional sidewalk repair and new installation. Whether you're repairing cracks, replacing broken slabs, or need DOT violation removal, we’ve got you covered.</p>
+  <p><strong>Sidewalk Repair:</strong> We provide professional sidewalk repair and installation services, including crack fixes, slab replacement, and DOT violation removal across NYC.</p>
 
-  <p><strong>Driveway Repairs:</strong> From resurfacing to full driveway replacements, our team ensures long-lasting, level, and visually appealing driveways. We work with concrete, asphalt, and pavers depending on your needs.</p>
+  <p><strong>Driveway Repairs:</strong> From resurfacing to full driveway replacements, we deliver long-lasting results using concrete, asphalt, or pavers based on your property needs.</p>
 
-  <p><strong>Foundation Repair:</strong> Professional assessment and repair of foundation issues to maintain structural integrity.</p>
+  <p><strong>Foundation Repair:</strong> Structural inspections and repairs to stabilize foundations and protect your home’s long-term integrity.</p>
 
-  <p><strong>Masonry:</strong> Brick, stone, and concrete block work for durable and attractive structures.</p>
+  <p><strong>Masonry:</strong> Brick, block, and stone masonry for durable walkways, steps, walls, and facades — custom-designed for your exterior needs.</p>
 
-  <p><strong>Pavers & Stones:</strong> Installation and repair of decorative pavers and natural stone surfaces.</p>
+  <p><strong>Pavers & Stones:</strong> Decorative paver and natural stone installation and repair for patios, walkways, and outdoor features.</p>
 
-  <p><strong>Siding:</strong> Expert installation and repair of vinyl, wood, and fiber cement siding to protect and beautify your home.</p>
+  <p><strong>Siding:</strong> Vinyl, wood, and fiber cement siding installation or replacement to boost curb appeal and weather resistance.</p>
 
   <div class="button-group">
-  <a class="button" href="exterior-gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
-  <a class="button" href="services.html">← Back to Services</a>
-</div>
-
+    <a class="button" href="exterior-gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
+    <a class="button" href="services.html">← Back to Services</a>
+  </div>
 </section>
 
-  <footer>
-   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-  </footer>
+
+ <footer>
+  <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
 </body>
 </html>
