--- a/Interior.html
+++ b/Interior.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>Interior Work | ELI MAS Construction Inc</title>
-  <meta content="Interior services by ELI MAS Construction Inc, including drywall, painting, flooring, and remodeling for your home." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interior Renovation in NYC | ELI MAS Construction Inc</title>
+  <meta name="description" content="Interior renovation services in NYC by ELI MAS Construction Inc — including drywall, flooring, painting, tile, carpentry, and kitchen/bath remodeling." />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="canonical" href="https://elimasconst.github.io/eli-mas-test-website/Interior.html" /> -->
 </head>
+
 <body>
   <header>
-    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-    <h1>ELI MAS CONSTRUCTION INC</h1>
-    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-    <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
 
-  <<section class="interior-section">
+
+  <section class="interior-section">
   <h2>Interior Work</h2>
 
-  <p>We provide a full range of interior construction and renovation services to improve the comfort, appearance, and functionality of your living space. Our skilled team handles everything from structural carpentry to high-end finishes.</p>
+  <p>We provide a full range of interior renovation services to improve the comfort, appearance, and value of your living space. Our skilled team handles everything from structural carpentry to high-end finishes — all tailored for NYC homes and apartments.</p>
 
-  <p><strong>Tile Installation:</strong> Expert installation of ceramic, porcelain, and natural stone tiles for floors, walls, and backsplashes</p>
+  <p><strong>Tile Installation:</strong> Expert installation of ceramic, porcelain, and natural stone tiles for floors, walls, backsplashes, and bathrooms.</p>
 
-  <p><strong>Carpentry:</strong> Custom framing, trim work, doors, and built-in shelving</p>
+  <p><strong>Carpentry:</strong> Custom framing, trim, doors, cabinetry, and built-in shelving crafted to fit your space.</p>
 
-  <p><strong>Renovations:</strong> Kitchen and bathroom remodeling, drywall, flooring, and painting</p>
+  <p><strong>Renovations:</strong> Full-service remodeling for kitchens, bathrooms, basements, and more — including flooring, drywall, and painting.</p>
 
-  <p><strong>Demolition:</strong> Safe and efficient interior demolition to prepare for remodeling or structural updates</p>
+  <p><strong>Demolition:</strong> Safe and efficient interior demolition to prep for remodels or structural changes.</p>
 
   <div class="interior-buttons">
     <a class="button" href="interior-gallery.html#interior-gallery">See our Interior Work photo gallery</a>
@@ -34,10 +37,10 @@
   </div>
 </section>
 
-
   <footer>
-    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-  </footer>
+  <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
+
 
 </body>
 </html>
