--- a/contact.html
+++ b/contact.html
@@ -2,41 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | ELI MAS Construction Inc – NYC Licensed Contractor</title>
   <meta name="description" content="Contact ELI MAS Construction Inc — a licensed and insured NYC contractor serving all 5 boroughs. Call 914-755-6641 or visit us at 1204 Boynton Ave, Bronx, NY." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-    <h1>ELI MAS CONSTRUCTION INC</h1>
-    <p>Licensed & Insured NYC Home Improvement Contractor</p>
-    <p>¡Hablamos Español!</p>
-  </header>
-
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
   <main>
   <section class="contact-section">
-
     <h2>Business Hours</h2>
-<table style="border-collapse: collapse; width: auto; margin: 0 auto 20px;">
-  <tr><th colspan="2" style="text-align: left; font-weight: bold;">Business Hours</th></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Monday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Tuesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Wednesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Thursday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Friday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Saturday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-  <tr><td style="padding-right: 10px; white-space: nowrap;">Sunday:</td><td style="white-space: nowrap;">Closed</td></tr>
-</table>
+    <table style="border-collapse: collapse; width: auto; margin: 0 auto 20px;">
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Monday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Tuesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Wednesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Thursday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Friday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Saturday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
+      <tr><td style="padding-right: 10px; white-space: nowrap;">Sunday:</td><td style="white-space: nowrap;">Closed</td></tr>
+    </table>
+
 
     <h2>Contact Info</h2>
-    <div class="contact-details">
-      <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
-      <p><strong>📍 Address:</strong> <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">1204 Boynton Ave., Bronx, NY 10472</a></p>
-      <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
-      <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
-    </div>
+<div class="contact-details">
+  <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
+  <p><strong>📍 Address:</strong> <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">1204 Boynton Ave., Bronx, NY 10472</a></p>
+  <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
+  <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
+</div>
 <h2>Send Us a Message</h2>
 <form class="contact-form" action="#" method="post">
   <label for="name">Name: <span style="color: red;">*</span></label>
