--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Interior Gallery | ELI MAS Construction Inc</title>
-  <meta content="View photos of past ELI MAS Construction Exterior jobs in NYC." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
-  <link href="lightbox/css/lightbox.min.css" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Interior Project Gallery | ELI MAS Construction Inc – NYC</title>
+  <meta name="description" content="Browse photos of ELI MAS Construction's NYC interior work, including tile installation, renovations, and custom carpentry." />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="lightbox/css/lightbox.min.css" />
+  <!-- <link rel="canonical" href="https://elimasconst.github.io/eli-mas-test-website/interior-gallery.html" /> -->
 </head>
 <body>
   <header>
-    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-    <h1>ELI MAS CONSTRUCTION INC</h1>
-    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-    <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+ </header>
 
   <section class="interior-gallery">
-  <h2 id="interior-gallery">Interior Projects</h2>
+  <h2>Interior Projects</h2>
 
-  <p><a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="18&quot; x 18&quot; Porcelain Tile Installation">
-    View Porcelain Tile Project
-  </a></p>
+  <p>
+    <a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="18&quot; x 18&quot; Porcelain Tile Installation">
+      View Porcelain Tile Project
+    </a>
+  </p>
 
   <!-- Hidden preload image -->
   <a href="Images/porc-tile2.jpg" data-lightbox="interior-gallery" data-title="Side view of same porcelain tile project" style="display: none;"></a>
@@ -31,12 +34,12 @@
   </p>
 </section>
 
-
   <footer>
-    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-    
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="lightbox/js/lightbox.min.js"></script>
-  <script src="js/script.js"></script>
+  <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="lightbox/js/lightbox.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
