--- a/services.html
+++ b/services.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Our Services | ELI MAS Construction Inc</title>
-    <meta
-      content="Explore the full list of services offered by ELI MAS Construction Inc — concrete, masonry, remodeling, roofing, and more."
-      name="description"
-    />
-    <link href="css/style.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Our Services | ELI MAS Construction Inc</title>
+  <meta name="description" content="Explore the full list of services offered by ELI MAS Construction Inc — concrete, masonry, remodeling, roofing, and more." />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
   <body>
     <header>
-      <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-      <h1>ELI MAS CONSTRUCTION INC</h1>
-      <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-      <p>¡Hablamos Español!</p>
-    </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+ </header>
+
 
  
      <section class="services-section">
@@ -58,9 +56,8 @@
 
 
     <footer>
-      <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-    </footer>
+  <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
 
-    <script src="js/script.js"></script>
-  </body>
-</html>
+<script src="js/script.js"></script>
+
