--- a/Roofing.html
+++ b/Roofing.html
@@ -1,37 +1,44 @@
-<!DOCTYPE html>
+<!D<!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Roofing Services | ELI MAS Construction Inc</title>
-  <meta content="Roof installation, repair, and coatings by ELI MAS Construction Inc to protect and enhance your home." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
- </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Roofing Services in NYC | ELI MAS Construction Inc</title>
+  <meta name="description" content="Roof installation, repair, coatings, and gutter services in NYC by ELI MAS Construction Inc — protecting homes with expert roofing solutions." />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- <link rel="canonical" href="https://elimasconst.github.io/eli-mas-test-website/Roofing.html" /> -->
+</head>
  <body>
   <header>
-   <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-   <h1>ELI MAS CONSTRUCTION INC</h1>
-   <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-   <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
 
   <section class="roofing-section">
-   <h2>Roofing Services</h2>
-   <p><strong>Roof Installation:</strong> Complete roof replacements and new installations using asphalt shingles, flat roofing systems, and more.</p>
-   <p><strong>Roof Repair:</strong> Leak detection and repair, shingle replacement, and flashing fixes to keep your home protected.</p>
-   <p><strong>Flat Roof Work:</strong> Expert solutions for flat roof installation and repairs using rubber, TPO, or modified bitumen systems.</p>
-   <p><strong>Roof Coating:</strong> Application of protective coatings to extend the life of your roof and improve energy efficiency.</p>
-   <p><strong>Gutter Installation &amp; Repair:</strong> Ensure proper water drainage with professional gutter setup and maintenance.</p>
-  </section>
+  <h2>Roofing Services</h2>
+
+  <p><strong>Roof Installation:</strong> Full roof replacements and new installations using asphalt shingles, flat roofing systems, and other durable materials.</p>
+
+  <p><strong>Roof Repair:</strong> Leak detection, shingle replacement, flashing repair, and emergency fixes to extend roof life and protect your NYC home.</p>
+
+  <p><strong>Flat Roof Work:</strong> Installation and maintenance of rubber, TPO, and modified bitumen systems — ideal for NYC flat roofs.</p>
+
+  <p><strong>Roof Coating:</strong> Reflective and protective coatings to improve roof energy efficiency and extend service life.</p>
+
+  <p><strong>Gutter Installation & Repair:</strong> Seamless gutter installation, cleaning, and downspout repairs to ensure proper water flow and foundation protection.</p>
 
   <div class="button-group">
-  <a href="roofing-gallery.html#roofing-gallery" class="button">See our roofing work photo gallery</a>
-  <a href="services.html" class="button">← Back to Services</a>
-</div>
+    <a class="button" href="roofing-gallery.html#roofing-gallery">See our Roofing Work photo gallery</a>
+    <a class="button" href="services.html">← Back to Services</a>
+  </div>
+</section>
+
 
   <footer>
-   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-  </footer>
+  <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
 
  </body>
 </html>
