--- a/about.html
+++ b/about.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>About Us | ELI MAS Construction Inc – NYC Licensed &amp; Insured Contractor</title>
-  <meta content="Learn more about ELI MAS Construction Inc — a trusted, licensed, and insured NYC contractor with decades of experience in home improvement and construction projects throughout all five boroughs." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
- </head>
- <body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About Us | ELI MAS Construction Inc – NYC Licensed & Insured Contractor</title>
+  <meta name="description" content="Learn more about ELI MAS Construction Inc — a trusted, licensed, and insured NYC contractor with decades of experience in home improvement and construction projects throughout all five boroughs." />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+  <body>
   <header>
-<img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-   <h1>ELI MAS CONSTRUCTION INC</h1>
-   <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-   <p>¡Hablamos Español!</p>
+    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+    <h1>ELI MAS CONSTRUCTION INC</h1>
+    <p>Licensed & Insured NYC Home Improvement Contractor</p>
+    <p>¡Hablamos Español!</p>
   </header>
-  
+ 
   <section class="about-section">
   <h2>About Us</h2>
 
-  <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who began his career in the trades at a young age. Originally launched in the mid 2000's as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
+  <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who began his career in the trades at a young age. Originally launched in the mid-2000s as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
 
-<p>Built on a foundation of hard work, skill, and reliability, our mission is to provide high-quality home improvement services with honesty and care.</p>
+  <p>Built on a foundation of hard work, skill, and reliability, our mission is to provide high-quality home improvement services with honesty and care.</p>
 
-<p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations — all tailored to meet the unique needs of our clients.</p>
+  <p>We specialize in concrete sidewalks and driveways, masonry, paver installations, and in-home renovations — all tailored to meet the unique needs of our clients.</p>
 
-<p>We proudly serve residential, commercial, and public clients across all five boroughs of New York City.</p>
+  <p>We proudly serve residential, commercial, and public clients across all five boroughs of New York City.</p>
 
   <p><a class="button" href="index.html">← Back to Home</a></p>
 </section>
 
-  <footer>
-   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+   <footer>
+    <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
   </footer>
   <script src="js/script.js"></script>
- </body>
+</body>
 </html>
+
