--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <title>Exterior Gallery | ELI MAS Construction Inc</title>
-  <meta content="View photos of past ELI MAS Construction Exterior jobs in NYC." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
-  <link href="lightbox/css/lightbox.min.css" rel="stylesheet"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Exterior Project Gallery | ELI MAS Construction Inc – NYC</title>
+  <meta name="description" content="Browse photos of ELI MAS Construction's NYC exterior work, including concrete, sheds, masonry, and custom outdoor projects." />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="lightbox/css/lightbox.min.css" />
+  <!-- <link rel="canonical" href="https://elimasconst.github.io/eli-mas-test-website/exterior-gallery.html" /> -->
 </head>
 <body>
   <header>
-    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-    <h1>ELI MAS CONSTRUCTION INC</h1>
-    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-    <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed & Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
 
-  <section class="roofing-gallery">
+ <section class="exterior-gallery">
   <h2 id="exterior-gallery">Exterior Projects</h2>
-  <p><a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New Shed Project">
-    View New Shed Project
-  </a></p>
 
-  <!-- Hidden preload image -->
-  <a href="Images/shed2.jpg" data-lightbox="exterior-gallery" data-title="Side view of the same shed project" style="display: none;"></a>
+  <p>
+    <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New 18' x 15' shed with concrete foundation and deck">
+      <img src="Images/shed.jpg" alt="Shed view" />
+    </a>
+  </p>
+
+  <p>
+    <a href="Images/shed2.jpg" data-lightbox="exterior-gallery" data-title="Side view of the shed">
+      <img src="Images/shed2.jpg" alt="Side view of the shed" />
+    </a>
+  </p>
 
   <p style="text-align: center; margin-top: 20px;">
     <a href="Exterior.html" class="button">← Return to Exterior</a>
@@ -31,10 +38,11 @@
 </section>
 
   <footer>
-    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-    
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="lightbox/js/lightbox.min.js"></script>
-  <script src="js/script.js"></script>
+  <p>&copy; 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="lightbox/js/lightbox.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
