--- a/roofing-gallery.html
+++ b/roofing-gallery.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Roofing Gallery | ELI MAS Construction Inc</title>
-  <meta content="View photos of past ELI MAS Construction Roofing jobs in NYC." name="description"/>
-  <link href="css/style.css" rel="stylesheet"/>
-  <link href="lightbox/css/lightbox.min.css" rel="stylesheet"/>
+  <meta name="description" content="View photos of completed roofing projects by ELI MAS Construction Inc — shingle installations, flat roofs, coatings, and more in NYC." />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="lightbox/css/lightbox.min.css" />
 </head>
 <body>
   <header>
-    <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo">
-    <h1>ELI MAS CONSTRUCTION INC</h1>
-    <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
-    <p>¡Hablamos Español!</p>
-  </header>
+  <img src="Images/Logo.jpg" alt="ELI MAS Construction Inc Logo" class="logo" />
+  <h1>ELI MAS CONSTRUCTION INC</h1>
+  <p>Licensed &amp; Insured NYC Home Improvement Contractor</p>
+  <p>¡Hablamos Español!</p>
+</header>
 
-  <section class="roofing-gallery">
+ <section class="roofing-gallery">
   <h2 id="roofing-gallery">Roofing Projects</h2>
-  <p><a href="Images/r1.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project">View Shingle Roof Project</a></p>
+  <p>
+    <a href="Images/r1.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project">
+      View Shingle Roof Project
+    </a>
+  </p>
 
   <!-- Hidden Lightbox preload links -->
   <a href="Images/r2.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
@@ -29,18 +31,15 @@
   <a href="Images/r7.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
 </section>
 
-
-    <p style="text-align: center; margin-top: 20px;">
-    <a href="Roofing.html" class="button">
-    ← Return to Roofing
-  </a>
+<p style="text-align: center; margin-top: 20px;">
+  <a href="Roofing.html" class="button">← Return to Roofing</a>
 </p>
 
+
   <footer>
-    <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
-    
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="lightbox/js/lightbox.min.js"></script>
-  <script src="js/script.js"></script>
-</body>
-</html>
+  <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="lightbox/js/lightbox.min.js"></script>
+<script src="js/script.js"></script>
