--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -21,16 +21,14 @@
   <h2 id="exterior-gallery">Exterior Projects</h2>
 
   <p>
-    <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New 18' x 15' shed with concrete foundation and deck">
-      <img src="Images/shed.jpg" alt="Shed view" />
-    </a>
-  </p>
+  <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New 18' x 15 shed with concrete foundation and deck">
+    View New Shed Project
+  </a>
+</p>
 
-  <p>
-    <a href="Images/shed2.jpg" data-lightbox="exterior-gallery" data-title="Side view of the shed">
-      <img src="Images/shed2.jpg" alt="Side view of the shed" />
-    </a>
-  </p>
+<!-- Hidden preload image -->
+<a href="Images/shed2.jpg" data-lightbox="exterior-gallery" data-title="Side view of the shed" style="display: none;"></a>
+
 
   <p style="text-align: center; margin-top: 20px;">
     <a href="Exterior.html" class="button">← Return to Exterior</a>
