--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -21,7 +21,7 @@
   <h2 id="exterior-gallery">Exterior Projects</h2>
 
   <p>
-  <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New 18' x 15 shed with concrete foundation and deck">
+  <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="New 15' x 8'x 7'6" shed with 18’ x 18’ x 18” concrete foundation and 20’ x 25’ x 6” concrete deck">
     View New Shed Project
   </a>
 </p>
