--- a/Exterior.html
+++ b/Exterior.html
@@ -32,7 +32,7 @@
   <p><strong>Siding:</strong> Vinyl, wood, and fiber cement siding installation or replacement to boost curb appeal and weather resistance.</p>
 
   <div class="button-group">
-    <a class="button" href="exterior-gallery.html#roofing-gallery">See our Exterior Work photo gallery</a>
+    <a class="button" href="exterior-gallery.html#exterior-gallery">See our Exterior work</a>
     <a class="button" href="services.html">← Back to Services</a>
   </div>
 </section>
