--- a/exterior-gallery - Copy.html
+++ b/exterior-gallery - Copy.html
@@ -19,19 +19,21 @@
 
  <section class="exterior-gallery">
   <h2 id="exterior-gallery">Exterior Projects</h2>
+
   <p>
-  <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="">
-  15' x 8' x 7'6" Shed with 18’ x 18’ x 18” Concrete Foundation and 20’ x 25’ x 6” Concrete Deck
-  <span class="sr-only"> – View full-size image</span>
-</a>
+    <a href="Images/shed.jpg"
+       data-lightbox="exterior-gallery"
+       data-title="New 15' x 8'x 7'6&quot; shed with 18’ x 18’ x 18” concrete foundation and 20’ x 25’ x 6” concrete deck">
+      View New Shed Project
+    </a>
+  </p>
 
-</p>
-
+  <!-- Hidden preload image with caption -->
   <a href="Images/shed2.jpg"
-   data-lightbox="exterior-gallery"
-   data-title="">
-   <span class="sr-only">Side view of the 15' x 8' x 7'6" Shed – NYC Exterior Project</span>
-</a>
+     data-lightbox="exterior-gallery"
+     data-title="Side view of the same shed"
+     style="display: none;"></a>
+
   <p style="text-align: center; margin-top: 20px;">
     <a href="Exterior.html" class="button">← Return to Exterior</a>
   </p>
