--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -21,7 +21,7 @@
   <h2 id="exterior-gallery">Exterior Projects</h2>
   <p>
   <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="">
-  15' x 8' x 7'6" Shed with 18’ x 18’ x 18” Concrete Foundation and 20’ x 25’ x 6” Concrete Deck
+  Custom built 15' x 8' x 7'6" Shed with 18’ x 18’ x 18” Concrete Foundation and 20’ x 25’ x 6” Concrete Deck
   <span class="sr-only"> – View full-size image</span>
 </a>
 
