--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -21,13 +21,15 @@
   <h2>Interior Projects</h2>
 
   <p>
-    <a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="18&quot; x 18&quot; Porcelain Tile Installation">
-      View Porcelain Tile Project
+    <a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="">
+      18" x 18" Porcelain Tile
+      <span class="sr-only"> – View full-size image</span>
     </a>
   </p>
 
-  <!-- Hidden preload image -->
-  <a href="Images/porc-tile2.jpg" data-lightbox="interior-gallery" data-title="Side view of same porcelain tile project" style="display: none;"></a>
+  <a href="Images/porc-tile2.jpg" data-lightbox="interior-gallery" data-title="">
+    <span class="sr-only">Second view of 18" x 18" Porcelain Tile – NYC Interior Project</span>
+  </a>
 
   <p style="text-align: center; margin-top: 20px;">
     <a href="Interior.html" class="button">← Return to Interior</a>
