--- a/roofing-gallery.html
+++ b/roofing-gallery.html
@@ -16,20 +16,34 @@
 
  <section class="roofing-gallery">
   <h2 id="roofing-gallery">Roofing Projects</h2>
+
   <p>
-    <a href="Images/r1.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project">
-      View Shingle Roof Project
+    <a href="Images/r1.jpeg" data-lightbox="roofing" data-title="">
+      Shingle Roof
+      <span class="sr-only"> – View full-size image</span>
     </a>
   </p>
 
-  <!-- Hidden Lightbox preload links -->
-  <a href="Images/r2.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
-  <a href="Images/r3.jpg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
-  <a href="Images/r4.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
-  <a href="Images/r5.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
-  <a href="Images/r6.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
-  <a href="Images/r7.jpeg" data-lightbox="roofing" data-title="Shingle Roof Project" style="display: none;"></a>
+   <a href="Images/r2.jpeg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Second roof project image – NYC Roofing Job</span>
+  </a>
+  <a href="Images/r3.jpg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Third roof project image – NYC Roofing Job</span>
+  </a>
+  <a href="Images/r4.jpeg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Fourth roof project image – NYC Roofing Job</span>
+  </a>
+  <a href="Images/r5.jpeg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Fifth roof project image – NYC Roofing Job</span>
+  </a>
+  <a href="Images/r6.jpeg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Sixth roof project image – NYC Roofing Job</span>
+  </a>
+  <a href="Images/r7.jpeg" data-lightbox="roofing" data-title="">
+    <span class="sr-only">Seventh roof project image – NYC Roofing Job</span>
+  </a>
 </section>
+
 
 <p style="text-align: center; margin-top: 20px;">
   <a href="Roofing.html" class="button">← Return to Roofing</a>
