--- a/Exterior.html
+++ b/Exterior.html
@@ -33,7 +33,7 @@
 
   <div class="button-group">
     <a class="button" href="exterior-gallery.html#exterior-gallery">See our Exterior work</a>
-    <a class="button" href="services.html">← Back to Services</a>
+    <a class="button" href="services.html#exterior-anchor">← Back to Services</a>
   </div>
 </section>
 
