--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
     <section class="learn-more-section">
   <h2>Learn More</h2>
   <ul class="services-list">
-    <li><a href="Exterior.html">Exterior Work</a></li>
+    <li id="exterior-anchor"><a href="Exterior.html">Exterior Work</a></li>
     <li><a href="Interior.html">Interior Work</a></li>
     <li><a href="Roofing.html">Roofing</a></li>
   </ul>
