--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -33,7 +33,7 @@
    <span class="sr-only">Side view of the 15' x 8' x 7'6" Shed – NYC Exterior Project</span>
 </a>
   <p style="text-align: center; margin-top: 20px;">
-    <a href="Exterior.html" class="button">← Return to Exterior</a>
+    <a href="Exterior.html#services-button" class="button">← Return to Exterior</a>
   </p>
 </section>
 
