--- a/Exterior.html
+++ b/Exterior.html
@@ -31,10 +31,10 @@
 
   <p><strong>Siding:</strong> Vinyl, wood, and fiber cement siding installation or replacement to boost curb appeal and weather resistance.</p>
 
-  <div class="button-group">
-    <a class="button" href="exterior-gallery.html#exterior-gallery">See our Exterior work</a>
-    <a class="button" href="services.html#exterior-anchor">← Back to Services</a>
-  </div>
+  <div class="button-group" id="exterior-buttons">
+  <a class="button" href="exterior-gallery.html#exterior-gallery">See our Exterior work</a>
+  <a class="button" href="services.html#exterior-anchor">← Back to Services</a>
+</div>
 </section>
 
 
