--- a/Interior.html
+++ b/Interior.html
@@ -31,9 +31,9 @@
 
   <p><strong>Demolition:</strong> Safe and efficient interior demolition to prep for remodels or structural changes.</p>
 
-  <div class="interior-buttons">
+  <div class="button-group" id="interior-buttons">
     <a class="button" href="interior-gallery.html#interior-gallery">See our Interior Work photo gallery</a>
-    <a class="button" href="services.html">← Back to Services</a>
+    <a class="button" href="services.html#interior-anchor">← Back to Services</a>
   </div>
 </section>
 
