--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -32,7 +32,7 @@
   </a>
 
   <p style="text-align: center; margin-top: 20px;">
-    <a href="Interior.html" class="button">← Return to Interior</a>
+    <a href="Interior.html#interior-buttons" class="button">← Return to Interior</a>
   </p>
 </section>
 
