--- a/roofing-gallery.html
+++ b/roofing-gallery.html
@@ -46,9 +46,7 @@
 
 
 <p style="text-align: center; margin-top: 20px;">
-  <a href="Roofing.html" class="button">← Return to Roofing</a>
-</p>
-
+  <a href="Roofing.html#roofing-buttons" class="button">← Return to Roofing</a>
 
   <footer>
   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
