--- a/services.html
+++ b/services.html
@@ -37,8 +37,8 @@
   <h2>Learn More</h2>
   <ul class="services-list">
     <li id="exterior-anchor"><a href="Exterior.html">Exterior Work</a></li>
-    <li><a href="Interior.html">Interior Work</a></li>
-    <li><a href="Roofing.html">Roofing</a></li>
+    <li id="interior-anchor"><a href="Interior.html">Interior Work</a></li>
+    <li id="roofing-anchor"><a href="Roofing.html">Roofing</a></li>
   </ul>
 </section>
 
