--- a/Roofing.html
+++ b/Roofing.html
@@ -29,10 +29,11 @@
 
   <p><strong>Gutter Installation & Repair:</strong> Seamless gutter installation, cleaning, and downspout repairs to ensure proper water flow and foundation protection.</p>
 
-  <div class="button-group">
-    <a class="button" href="roofing-gallery.html#roofing-gallery">See our Roofing Work photo gallery</a>
-    <a class="button" href="services.html#roofing-anchor">← Back to Services</a>
-  </div>
+  <div class="button-group" id="roofing-buttons">
+  <a class="button" href="roofing-gallery.html#roofing-gallery">See our Roofing Work photo gallery</a>
+  <a class="button" href="services.html#roofing-anchor">← Back to Services</a>
+</div>
+
 </section>
 
 
