--- a/Interior.html
+++ b/Interior.html
@@ -33,7 +33,8 @@
 
   <div class="button-group" id="interior-buttons">
     <a class="button" href="interior-gallery.html#interior-gallery">See our Interior Work photo gallery</a>
-    <a class="button" href="services.html#interior-anchor">← Back to Services</a>
+   <a class="button" href="services.html#learn-more">← Back to Services</a>
+
   </div>
 </section>
 
