--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
 </section>
 
     <section class="learn-more-section">
-  <h2>Learn More</h2>
+  <h2 id="learn-more">Learn More</h2>
   <ul class="services-list">
     <li id="exterior-anchor"><a href="Exterior.html">Exterior Work</a></li>
     <li id="interior-anchor"><a href="Interior.html">Interior Work</a></li>
