--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -32,10 +32,12 @@
    data-title="">
    <span class="sr-only">Side view of the 15' x 8' x 7'6" Shed – NYC Exterior Project</span>
 </a>
-  <p style="text-align: center; margin-top: 20px;">
-    <a href="Exterior.html#exterior-buttons" class="button">← Return to Exterior</a>
-    <a href="services.html#learn-more" class="button">← Back to Services</a>
-  </p>
+  <p style="text-align: center; margin-top: 20px; margin-bottom: 1.5em;">
+  <a href="Exterior.html#exterior-buttons" class="button">← Return to Exterior</a>
+</p>
+<p style="text-align: center;">
+  <a href="services.html#learn-more" class="button">← Back to Services</a>
+</p>
 </section>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
