--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -31,10 +31,12 @@
     <span class="sr-only">Second view of 18" x 18" Porcelain Tile – NYC Interior Project</span>
   </a>
 
-  <p style="text-align: center; margin-top: 20px;">
-    <a href="Interior.html#interior-buttons" class="button">← Return to Interior</a>
-    <a href="services.html#learn-more" class="button">← Back to Services</a>
-  </p>
+  <p style="text-align: center; margin-top: 20px; margin-bottom: 2em;">
+  <a href="Interior.html#interior-buttons" class="button">← Return to Interior</a>
+</p>
+<p style="text-align: center;">
+  <a href="services.html#learn-more" class="button">← Back to Services</a>
+</p>
 </section>
 
   <footer>
