--- a/roofing-gallery.html
+++ b/roofing-gallery.html
@@ -45,11 +45,12 @@
 </section>
 
 
-<p style="text-align: center; margin-top: 20px;">
-  <a href="Roofing.html#roofing-buttons" class="button">← Return to Roofing</a>
+<p style="text-align: center; margin-top: 20px; margin-bottom: 2em;">
+  <a href="roofing.html#roofing-buttons" class="button">← Return to Roofing</a>
+</p>
+<p style="text-align: center;">
   <a href="services.html#learn-more" class="button">← Back to Services</a>
 </p>
-
 
   <footer>
   <p>© 2025 ELI MAS CONSTRUCTION INC. All rights reserved.</p>
