--- a/services - Copy.html
+++ b/services - Copy.html
@@ -36,9 +36,9 @@
     <section class="learn-more-section">
   <h2 id="learn-more">Learn More</h2>
   <ul class="services-list">
-    <li id="exterior-anchor"><a href="exterior.html">Exterior Work</a></li>
-    <li id="interior-anchor"><a href="interior.html">Interior Work</a></li>
-    <li id="roofing-anchor"><a href="roofing.html">Roofing</a></li>
+    <li id="exterior-anchor"><a href="Exterior.html">Exterior Work</a></li>
+    <li id="interior-anchor"><a href="Interior.html">Interior Work</a></li>
+    <li id="roofing-anchor"><a href="Roofing.html">Roofing</a></li>
   </ul>
 </section>
 
