--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -32,7 +32,7 @@
   </a>
 
   <p style="text-align: center; margin-top: 20px; margin-bottom: 2em;">
-  <a href="Interior.html#interior-buttons" class="button">← Return to Interior</a>
+  <a href="interior.html#interior-buttons" class="button">← Return to Interior</a>
 </p>
 <p style="text-align: center;">
   <a href="services.html#learn-more" class="button">← Back to Services</a>
