--- a/about.html
+++ b/about.html
@@ -26,7 +26,10 @@
 
   <p>We proudly serve residential, commercial, and public clients across all five boroughs of New York City.</p>
 
-  <p><a class="button" href="index.html">← Back to Home</a></p>
+  <p style="text-align: center; margin-top: 20px;">
+  <a href="index.html" class="button">← Back to Home</a>
+</p>
+
 </section>
 
    <footer>
