--- a/contact.html
+++ b/contact.html
@@ -17,18 +17,11 @@
   <main>
   <section class="contact-section">
     <h2>Business Hours</h2>
-    <table style="border-collapse: collapse; width: auto; margin: 0 auto 20px;">
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Monday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Tuesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Wednesday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Thursday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Friday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Saturday:</td><td style="white-space: nowrap;">8 AM to 5 PM</td></tr>
-      <tr><td style="padding-right: 10px; white-space: nowrap;">Sunday:</td><td style="white-space: nowrap;">Closed</td></tr>
-    </table>
+    <p style="text-align: center;">
+      Open 24 hours a day, 7 days a week
+    </p>
 
-
-    <h2>Contact Info</h2>
+    <h2>Contact Information</h2>
 <div class="contact-details">
   <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
   <p><strong>📍 Address:</strong> <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">1204 Boynton Ave., Bronx, NY 10472</a></p>
