--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,9 @@
   <p>¡Hablamos Español!</p>
 </header>
   <main>
-  <section class="contact-section">
-    <h2>Business Hours</h2>
-    <p style="text-align: center;">
-      Open 24 hours a day, 7 days a week
-    </p>
-
-    <h2>Contact Information</h2>
-<div class="contact-details">
-  <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
-  <p><strong>📍 Address:</strong> <a href="https://www.google.com/maps/place/1204+Boynton+Ave,+Bronx,+NY+10472" target="_blank">1204 Boynton Ave., Bronx, NY 10472</a></p>
-  <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
-  <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
-</div>
-<h2>Send Us a Message</h2>
-<form class="contact-form" action="#" method="post">
+<div class="contact-form-wrapper">
+  <h2>Send Us a Message</h2>
+  <form class="contact-form" action="#" method="post">
   <label for="name">Name: <span style="color: red;">*</span></label>
   <input type="text" id="name" name="name" required style="width: 300px;" />
 
@@ -69,6 +57,21 @@
 
   <button type="submit">Submit</button>
 </form>
+</div>
+  <section class="contact-section">
+    <h2>Business Hours</h2>
+    <p style="text-align: center;">
+      Open 24 hours a day, 7 days a week
+    </p>
+
+    <h2>Contact Information</h2>
+<div class="contact-details">
+  <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
+  <p><strong>📍 Based in:</strong> The Bronx — Serving all 5 boroughs of New York City</p>
+  <img src="Images/nyc-5-boroughs-map.jpg" alt="Map showing the 5 boroughs of NYC" style="max-width: 100%; height: auto; margin-top: 10px; border-radius: 6px;" />
+  <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
+  <p><em>(To verify license, enter “2083303-DCA” in the NYC DCA search box)</em></p>
+</div>
 
 
     <div class="back-button">
