--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 <div class="contact-details">
   <p><strong>📞 Phone:</strong> <a href="tel:9147556641">914-755-6641</a></p>
   <p><strong> Based in:</strong> The Bronx — Proudly Serving the 5 boroughs of New York City</p>
-  <img src="Images/nyc-5-boroughs-map.jpg"
+  <img src="Images/nyc-5-boroughs-map.png"
      alt="Map showing the 5 boroughs of NYC"
      style="max-width: 400px; width: 100%; height: auto; margin: 10px auto 0; display: block; border-radius: 6px;" />
   <p><strong>License #:</strong> <a href="https://a866-dcwpbp.nyc.gov/search" target="_blank">2083303-DCA (NYC)</a></p>
