--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <section class="about-section">
   <h2>About Us</h2>
 
-  <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who began his career in the trades at a young age. Originally launched in the mid-2000s as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
+  <p><strong>ELI MAS Construction, Inc.</strong> was founded by Eliseo Camas Agualema, who began his career in the trades at a early age. Originally launched in the mid-2000s as J.B.C. Construction, the company has grown into a trusted name in New York City construction.</p>
 
   <p>Built on a foundation of hard work, skill, and reliability, our mission is to provide high-quality home improvement services with honesty and care.</p>
 
