--- a/exterior-gallery.html
+++ b/exterior-gallery.html
@@ -20,13 +20,14 @@
  <section class="exterior-gallery">
   <h2 id="exterior-gallery">Exterior Projects</h2>
   <p>
-  <a href="Images/shed.jpg" data-lightbox="exterior-gallery" data-title="">
+<img src="Images/e-g-c-soon.png"
+     alt="Exterior Gallery Coming Soon"
+     style="max-width: 400px; width: 100%; height: auto; margin: 10px auto 0; display: block; border-radius: 6px;" />
+  <a href="Images/e-g-c-soon.jpg.jpg" data-lightbox="exterior-gallery" data-title="">
   Custom built 15' x 8' x 7'6" Shed with 18’ x 18’ x 18” Concrete Foundation and 20’ x 25’ x 6” Concrete Deck
   <span class="sr-only"> – View full-size image</span>
 </a>
-
 </p>
-
   <a href="Images/shed2.jpg"
    data-lightbox="exterior-gallery"
    data-title="">
