--- a/interior-gallery.html
+++ b/interior-gallery.html
@@ -19,8 +19,10 @@
 
   <section class="interior-gallery">
   <h2>Interior Projects</h2>
-
   <p>
+<img src="Images/i-g-c-soon.jpeg"
+     alt="Interior Gallery Coming Soon"
+     style="max-width: 400px; width: 100%; height: auto; margin: 10px auto 0; display: block; border-radius: 6px;" />
     <a href="Images/porc-tile.jpg" data-lightbox="interior-gallery" data-title="">
       18" x 18" Porcelain Tile
       <span class="sr-only"> – View full-size image</span>
